executable(
  'sample-autodetect',
  'sample-autodetect.c',
  'samples.h',
  'context.c',
  'config.c',
  dependencies: libgphoto2_dep,
)

executable(
  'sample-multi-detect',
  'sample-multi-detect.c',
  'samples.h',
  'autodetect.c',
  'context.c',
  'config.c',
  dependencies: libgphoto2_dep,
)

executable(
  'lunkwill-canon-capture',
  'lunkwill-canon-capture.c',
  'samples.h',
  'context.c',
  'config.c',
  dependencies: libgphoto2_dep,
)

executable(
  'sample-owner',
  'sample-owner.c',
  'samples.h',
  'context.c',
  'config.c',
  dependencies: libgphoto2_dep,
)

executable(
  'sample-photobooth',
  'sample-photobooth.c',
  'samples.h',
  'context.c',
  'config.c',
  dependencies: libgphoto2_dep,
)

executable(
  'sample-preview',
  'preview.c',
  'samples.h',
  'context.c',
  'config.c',
  'focus.c',
  dependencies: libgphoto2_dep,
)

executable(
  'sample-tether',
  'sample-tether.c',
  'samples.h',
  'context.c',
  'config.c',
  dependencies: libgphoto2_dep,
)

executable(
  'sample-afl',
  'sample-afl.c',
  'samples.h',
  'context.c',
  'autodetect.c',
  dependencies: libgphoto2_dep,
)

executable(
  'best-iso',
  'best-iso.c',
  dependencies: libgphoto2_dep,
)

executable(
  'sample-capture',
  'sample-capture.c',
  'samples.h',
  'context.c',
  'config.c',
  'focus.c',
  dependencies: libgphoto2_dep,
)

executable(
  'sample-trigger-capture',
  'sample-trigger-capture.c',
  'samples.h',
  'context.c',
  'config.c',
  dependencies: libgphoto2_dep,
)

executable(
  'sample-justfocus',
  'sample-justfocus.c',
  'samples.h',
  'context.c',
  'focus.c',
  dependencies: libgphoto2_dep,
)