## Process this file with automake to generate a GNU Makefile

gphotoheaddir = $(prefix)/include/gphoto2
gphotohead_HEADERS= \
		gphoto2.h \
		gphoto2-camera.h \
		gphoto2-core.h \
		gphoto2-datatypes.h \
		gphoto2-file.h \
		gphoto2-filesys.h \
		gphoto2-frontend.h \
		gphoto2-library.h \
		gphoto2-lists.h \
		gphoto2-port.h \
		gphoto2-settings.h \
		gphoto2-widget.h

