## Process this file with automake to generate a GNU Makefile

gphotoheaddir = $(prefix)/include/gphoto2
gphotohead_HEADERS=			\
	gphoto2.h 			\
	gphoto2-abilities.h		\
	gphoto2-abilities-list.h	\
	gphoto2-camera.h		\
	gphoto2-core.h			\
	gphoto2-debug.h			\
	gphoto2-file.h			\
	gphoto2-library.h		\
	gphoto2-list.h			\
	gphoto2-setting.h		\
	gphoto2-result.h

